<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Zona6_5"
    android:background="@color/papiro">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/erantzun_egia_edo_gezurra"
        style="@style/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        style="@style/normalTextSmall"
        android:text="@string/euskal_liburu_eta_disko_azoka_durangon_bi_urtean_behin_ospatzen_da"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/normalTextSmall"
        android:text="@string/abenduaren_lehenengo_hamabostaldian_ospatzen_den_euskal_herriko_azokarik_handiena_eta_garrantzitsuena_da"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/normalTextSmall"
        android:text="@string/_1995eko_azaroaren_1ean_lehen_edizioa_antolatu_zuten_durangon_andra_mariaren_basilikako_arkupean"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        style="@style/normalTextSmall"
        android:text="@string/euskal_herri_osoko_argitaletxeak_batzen_dira_azokan_han_bere_liburuak_eta_diskoak_beste_liburuen_eta_diskoen_truke_aldatzeko_asmoz"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        style="@style/normalTextSmall"
        android:layout_marginTop="24dp"
        android:text="@string/saltzen_diren_liburuak_eta_diskoak_azoka_egiten_den_urte_berean_argitaratutakoak_baino_ez_izan_ohi_dira"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        style="@style/normalTextSmall"
        android:layout_marginTop="24dp"
        android:text="@string/durangoko_euskal_liburu_eta_disko_azoka_euskararen_eta_euskarazko_kulturaren_erakustoki_erraldoi_eta_jai_nagusi_bihurtzen_da"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Switch
        android:id="@+id/z65switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="G/E"
        style="@style/normalTextSmall"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <Switch
        android:id="@+id/z65switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="G/E"
        style="@style/normalTextSmall"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/z65switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="G/E"
        style="@style/normalTextSmall"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <Switch
        android:id="@+id/z65switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="G/E"
        style="@style/normalTextSmall"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <Switch
        android:id="@+id/z65switch5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="G/E"
        style="@style/normalTextSmall"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <Switch
        android:id="@+id/z65switch6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="G/E"
        style="@style/normalTextSmall"
        app:layout_constraintBottom_toBottomOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <Button
        android:id="@+id/btnZona6_5zuzendu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zuzendu"
        style="@style/buttonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/z65switch6" />

</androidx.constraintlayout.widget.ConstraintLayout>