<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Zona1_8"
    android:background="@color/papiro">

    <TextView
        android:id="@+id/txtZona1_8_Titulo"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtZona1_8_Titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgZona1_8_Txorimalo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtZona1_8_Titulo"
        app:srcCompat="@drawable/txorimalo" />

    <TextView
        android:id="@+id/txtZona1_8_Txorimalo"
        style="@style/normalText"
        android:layout_width="172dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:text="@string/txtZona1_8_Txorimalo_1"
        app:layout_constraintStart_toEndOf="@+id/imgZona1_8_Txorimalo"
        app:layout_constraintTop_toBottomOf="@+id/txtZona1_8_Titulo" />

    <ImageView
        android:id="@+id/imgZona1_8_TxorimaloLetraD"
        android:layout_width="160dp"
        android:layout_height="206dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgZona1_8_Txorimalo"
        app:srcCompat="@drawable/__8" />

    <TextView
        android:id="@+id/txtZona1_8_LetraD"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txtZona1_8_LetraD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgZona1_8_TxorimaloLetraD" />

</androidx.constraintlayout.widget.ConstraintLayout>